# astarte-message-hub-proto

.github/workflows/: code-generation.yaml  rust-check-build.yaml  rust-code-generation.yaml  rust-publish.yaml
proto/astarteplatform/msghub/: message_hub_service.proto  property.proto
rust/: Cargo.toml
rust/astarte-message-hub-proto/: Cargo.toml
rust/astarte-message-hub-proto/src/: astarteplatform.msghub.rs  lib.rs  mock.rs
rust/rust-codegen/src/: main.rs
rust/src/: lib.rs
