# This file is part of Astarte.
#
# Copyright 2023 SECO Mind Srl
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "astarte-message-hub-proto-builder"
version = "0.1.0"

[workspace]
resolver = "2"
members = [
    "astarte-message-hub-proto"	
]

[workspace.dependencies]
tonic = "0.8.2"

[dependencies]
pbjson-types = "0.5"
prost = "0.11.3"

[build-dependencies]
tonic-build = "0.8.2" 
