# This file is part of Astarte.
#
# Copyright 2023 SECO Mind Srl
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "astarte-message-hub-proto"
version = "0.5.1"
edition.workspace = true
description ="Astarte message hub protocol buffers for Rust"
rust-version.workspace = true

[dependencies]
tonic.workspace = true
prost.workspace = true
pbjson-types.workspace = true
chrono = "0.4.24"
thiserror = "1.0"
uuid = { version = "1.4.1", features = ["v4"] }
